# bf1

./: README.md
include/kinematika/: body.h  inverse.h  motion.h
main/: CMakeLists.txt  main.cpp
src/: kinematics.h
src/kinematika/: body.cpp  global.cpp  inverse.cpp  motion.cpp
src2/: main
